js added, created footer and skills

--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
     <div>
       <section id="Navbar">
         <nav class="navbar">
-          <a href="#About">About</a>
-          <a href="#Education">Education</a>
-          <a href="#Experience">Experience</a>
-          <a href="#Skills">Skills</a>
-          <a href="#Projects">Projects</a>
-          <a href="#Connect">Connect</a>
+          <ul>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Education">Education</a></li>
+            <li><a href="#Experience">Experience</a></li>
+            <li><a href="#Skills">Skills</a></li>
+            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#Connect">Connect</a></li>
+          </ul>
+          
         </nav>
       </section>
 
@@ -161,6 +164,7 @@
       <section id="Skills">
         <h2>Skills</h2>
         <br />
+        <ul class="allSkills"></ul>
       </section>
 
       <section id="Projects">
@@ -203,5 +207,8 @@
           </div>
       </section>
     </div>
+    <footer>
+    </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
