--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <section id="Projects">
         <h2>Projects</h2>
         <br />
-        <ul></ul>
+        <ul class="allProjects"></ul>
       </section>
 
       <section id="Connect">
@@ -232,7 +232,7 @@
 
         <div class="message_sections">
             <label for="messages" class="label">Message: </label>
-            <textarea name="usersMessage" id ="message" required class="input"></textarea>
+            <textarea name="usersMessage" id ="message" required class="textArea"></textarea>
         </div>
         <br>
         <button type="submit" class="but_submit">Submit</button>
