--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
   <body>
-
+    <div class="bodyAll">
       <section id="Navbar">
         <nav class="navbar">
           <ul>
@@ -37,7 +37,7 @@
             <li><a href="#Skills">Skills</a></li>
             <li><a href="#Projects">Projects</a></li>
             <li><a href="#Connect">Connect</a></li>
-            <li><a href="#messages">Leave message</a></li>
+            <li><a href="#messagesForm">Leave message</a></li>
           </ul>
         </nav>
 
@@ -47,8 +47,9 @@
                 <span></span> 
               </div>
         </div>
-
       </section>
+
+      <!-- <button class="darkButton">Dark mode</button> -->
 
       <br />
       <div class="name">
@@ -109,8 +110,7 @@
             /course of study: Information System Software
           </p>
         </div>
-
-        <div class="edu-name">
+<div class="edu-name">
           <h3>2022 - 2023</h3>
           <p>CPC College/ ESL class</p>
         </div>
@@ -177,9 +177,12 @@
       </section>
 
       <section id="Projects">
-        <h2>Projects</h2>
-        <br />
-        <ul class="allProjects"></ul>
+          <h2>Projects</h2>
+          <br />
+            <!-- <div class="infoProjects" >  -->
+              <ul ></ul>
+            <!-- </div> -->
+        
       </section>
 
       <section id="Connect">
@@ -230,7 +233,8 @@
             <input type="email" name ="usersEmail" required class="input">
         </div>
 
-        <div class="message_sections">
+
+<div class="message_sections">
             <label for="messages" class="label">Message: </label>
             <textarea name="usersMessage" id ="message" required class="textArea"></textarea>
         </div>
@@ -248,6 +252,6 @@
     </footer>
 
     <script src="js/index.js"></script>
-
+  </div>
   </body>
 </html>
